--- a/bidzz.html
+++ b/bidzz.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TES ENKRIPSI</title>
+    <title>BIDZZ OFFICIAL 🇮🇩</title>
 </head>
 <body>
     <script language="javascript">
